Added profile pic

--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 
     <body>
         <div class="main"> 
+            
             <div class="leftBar">
-                <h3>aaa</h3>
+                <div class="profileImage">
+                    <img src="images/profilePic.jpg" class="rounded mx-auto d-block" alt="">
+                </div>
+                <div> 
+                    <h3>João Seixas</h3>
+
+                </div>
             </div>
 
             <div class="mainContent">
                 <h1>João <b>Seixas</b></h1>
-                <p>Student in Faculty of Engineering, University of Porto in Portugal.</p><img src="https://img.icons8.com/offices/48/000000/portugal.png">
+                <p>Student in Faculty of Engineering, University of Porto in Portugal <img src="https://img.icons8.com/offices/30/000000/portugal.png">.</p>
                 <p>Taking BSc (3 years) + MSc (2 years) in Informatics and Computer Engineering (currently on the 5th and last year).</p>
                 <p>Currently @ Kraków on ERASMUS+.</p> 
             </div>
