Add work in progress...

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             </div>
 
             <div class="mainContent">
+                <h1> Work in progress...</h1>
+                <br>
+                <br>
                 <h1>João <b>Seixas</b></h1>
                 <p>Student in Faculty of Engineering, University of Porto in Portugal <img src="https://img.icons8.com/offices/30/000000/portugal.png">.</p>
                 <p>Taking BSc (3 years) + MSc (2 years) in Informatics and Computer Engineering (currently on the 5th and last year).</p>
